--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,6 +1,7 @@
 ---
 common-css:
   - "/assets/css/bootstrap-social.css"
+  - "/assets/css/bootstrap.css"
   - "/assets/css/beautifuljekyll.css"
 common-ext-css:
   - href: "https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -17,6 +18,7 @@ common-ext-js:
     sri: "sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 common-js:
   - "/assets/js/beautifuljekyll.js"
+  - "/assets/js/bootstrap.bundle.js"
 ---
 
 <!DOCTYPE html>
