--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,16 @@ layout: page
 
 {{ content }}
 
-<div id="carousel" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/assets/img/cola/ucla4cola.jpg" alt="ucla4cola">
+        <img src="..." class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="/assets/img/cola/ucd4cola.jpg" alt="ucd4cola">
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
