--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,13 +7,13 @@ layout: page
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="/assets/img/cola/ucd4cola.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="/assets/img/cola/ucla4cola.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="/assets/img/cola/ucsb4cola.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
 </div>
