--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,8 @@ layout: page
 ---
 
 {{ content }}
+<link rel=stylesheet type="text/css" href="/assets/css/bootstrap.css">
+<script type="text/javascript" src="/assets/js/bootstrap.js"></script>
 
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
