--- a/_includes/head.html
+++ b/_includes/head.html
@@ -142,7 +142,7 @@
   {% if page.comments and site.staticman.repository and site.staticman.branch %}
   <link rel="stylesheet" href="{{ "/assets/css/staticman.css" | relative_url }}">
   {% endif %}
-
+  <link rel="stylesheet" href="{{ "/assets/css/bootstrap.css" | relative_url }}">
   {% if page.head-extra %}
     {% for file in page.head-extra %}
       {% include {{ file }} %}
