--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,14 @@ layout: page
       <img src="/assets/img/cola/ucsb4cola.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
 {% assign posts = paginator.posts | default: site.posts %}
