carousel with controls

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,16 +5,16 @@ layout: page
 {{ content }}
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="/assets/img/cola/ucd4cola.jpg" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/cola/ucla4cola.jpg" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/cola/ucsb4cola.jpg" class="d-block w-100" alt="...">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
