--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,13 +13,13 @@ layout: page
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/assets/img/cola/ucd4cola.jpg" class="d-block w-80" alt="...">
+      <img class="d-block w-100" src="/assets/img/cola/ucd4cola.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/cola/ucla4cola.jpg" class="d-block w-80" alt="...">
+      <img class="d-block w-100" src="/assets/img/cola/ucsb4cola.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img src="/assets/img/cola/ucsb4cola.jpg" class="d-block w-80" alt="...">
+      <img class="d-block w-100" src="/assets/img/cola/ucla4cola.jpg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
