--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,13 +15,13 @@ layout: page
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
+          <img class="d-block w-100" class="rounded" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/assets/img/cola/ucsb4cola.jpeg" alt="UCSB 4 COLA">
+          <img class="d-block w-100" class="rounded" src="/assets/img/cola/ucsb4cola.jpeg" alt="UCSB 4 COLA">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/assets/img/cola/ucla4cola.jpg" alt="UCLA 4 COLA">
+          <img class="d-block w-100" class="rounded" src="/assets/img/cola/ucla4cola.jpg" alt="UCLA 4 COLA">
         </div>
       </div>
       <a class="carousel-control-prev" href="#colaCarousel" role="button" data-slide="prev">
