--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: page
 {{ content }}
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
 
-<div>
+<div margin="10%">
   <div padding="10%">
     <div id="colaCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
