--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: page
 
 <div margin="10%">
   <div padding="10%">
-    <div id="colaCarousel" class="carousel slide" data-ride="carousel">
+    <div id="colaCarousel" margin="100px" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#colaCarousel" data-slide-to="1"></li>
