--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,13 +4,12 @@ layout: page
 
 {{ content }}
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-  <div id="colaCarousel" class="carousel slide rounded m-10" data-ride="carousel">
+  <div id="colaCarousel" class="carousel slide rounded border-dark" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#colaCarousel" data-slide-to="1"></li>
       <li data-target="#colaCarousel" data-slide-to="2"></li>
     </ol>
-    <span class="border border-dark">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="rounded w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
@@ -22,7 +21,6 @@ layout: page
         <img class="rounded w-100" src="/assets/img/cola/ucla4cola.jpg" alt="UCLA 4 COLA">
       </div>
     </div>
-    </span>
     <a class="carousel-control-prev" href="#colaCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
