--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,12 @@
 layout: page
 ---
 
-{{ content }}
+<div padding-bottom="10%">
+  {{ content }}
+</div>
+
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-  <div id="colaCarousel" class="carousel slide rounded border-dark" data-ride="carousel">
+<div id="colaCarousel" class="carousel slide rounded border-dark" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#colaCarousel" data-slide-to="1"></li>
