--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: page
 </div>
 
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-<div id="colaCarousel" class="carousel slide rounded border-dark" data-ride="carousel">
+<div id="colaCarousel" class="carousel slide border-dark" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#colaCarousel" data-slide-to="1"></li>
