--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,32 +7,32 @@ layout: page
 </div>
 
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-<div id="colaCarousel" class="carousel slide border-dark" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#colaCarousel" data-slide-to="1"></li>
-      <li data-target="#colaCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="rounded w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
-      </div>
-      <div class="carousel-item">
-        <img class="rounded w-100" src="/assets/img/cola/ucsb4cola.jpeg" alt="UCSB 4 COLA">
-      </div>
-      <div class="carousel-item">
-        <img class="rounded w-100" src="/assets/img/cola/ucla4cola.jpg" alt="UCLA 4 COLA">
-      </div>
+<div id="colaCarousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#colaCarousel" data-slide-to="1"></li>
+    <li data-target="#colaCarousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner border-dark rounded">
+    <div class="carousel-item active">
+      <img class="rounded w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
     </div>
-    <a class="carousel-control-prev" href="#colaCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#colaCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="carousel-item">
+      <img class="rounded w-100" src="/assets/img/cola/ucsb4cola.jpeg" alt="UCSB 4 COLA">
+    </div>
+    <div class="carousel-item">
+      <img class="rounded w-100" src="/assets/img/cola/ucla4cola.jpg" alt="UCLA 4 COLA">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#colaCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#colaCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 {% assign posts = paginator.posts | default: site.posts %}
 
