--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: page
     <li data-target="#colaCarousel" data-slide-to="1"></li>
     <li data-target="#colaCarousel" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner border-dark rounded m-10">
+  <div class="carousel-inner border-dark rounded p-1 m-1">
     <div class="carousel-item active">
       <img class="rounded w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
     </div>
