--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: page
 {{ content }}
 
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-<div id="colaCarousel" class="carousel slide border-dark rounded p-3" data-ride="carousel">
+<div id="colaCarousel" class="carousel slide border-dark mx-auto rounded p-3" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#colaCarousel" data-slide-to="1"></li>
