--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,14 +11,14 @@ layout: page
     <li data-target="#colaCarousel" data-slide-to="1"></li>
     <li data-target="#colaCarousel" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
+  <div class="carousel-inner rounded">
+    <div class="carousel-item rounded">
       <img class="rounded w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item rounded active">
       <img class="rounded w-100" src="/assets/img/cola/ucsb4cola.jpeg" alt="UCSB 4 COLA">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item rounded">
       <img class="rounded w-100" src="/assets/img/cola/ucla4cola.jpg" alt="UCLA 4 COLA">
     </div>
   </div>
