--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,13 +5,13 @@ layout: page
 {{ content }}
 
 <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
-<div id="colaCarousel" class="carousel slide border-dark mx-auto rounded p-3" data-ride="carousel">
+<div id="colaCarousel" class="carousel slide rounded border-dark mx-auto p-3" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#colaCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#colaCarousel" data-slide-to="1"></li>
     <li data-target="#colaCarousel" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner rounded">
+  <div class="carousel-inner rounded border-dark">
     <div class="carousel-item rounded">
       <img class="rounded w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
     </div>
