--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,6 +14,9 @@ layout: page
   <div class="carousel-inner rounded border-dark">
     <div class="carousel-item rounded">
       <img class="rounded w-100" src="/assets/img/cola/ucsc4cola.jpg" alt="UCSC Grading UCOP Performance">
+      <div class="carousel-caption d-none d-md-block">
+        <p>Grading UCOP</p>
+      </div>
     </div>
     <div class="carousel-item rounded active">
       <img class="rounded w-100" src="/assets/img/cola/ucsb4cola.jpeg" alt="UCSB 4 COLA">
